# Multi-process-task-scheduler

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
include/scheduler/: FCFS.h  Priority.h  RR.h  Scheduler.h
include/task/: task.h
include/utils/: utils.h
src/scheduler/: FCFS.cpp  Priority.cpp  RR.cpp
src/utils/: utils.cpp
